--- a/po/ru.po
+++ b/po/ru.po
@@ -164,11 +164,11 @@ msgstr "Не удается подключиться к Интернету. Пр
 
 #: public/views/includes/connection.html
 msgid ""
-"Can't connect to ravend to get live updates from the p2p network. (Tried "
-"connecting to ravend at {{host}}:{{port}} and failed.)"
+"Can't connect to bitcored to get live updates from the p2p network. (Tried "
+"connecting to bitcored at {{host}}:{{port}} and failed.)"
 msgstr ""
-"Невозможно подключиться к ravend для получения живых обновлений из сети p2p. "
-"(Пробовал подключиться к ravend на {{host}}: {{port}} и не удалось.)"
+"Невозможно подключиться к bitcored для получения живых обновлений из сети p2p. "
+"(Пробовал подключиться к bitcored на {{host}}: {{port}} и не удалось.)"
 
 #: public/views/rich_list.html
 msgid "Coins"
@@ -199,8 +199,8 @@ msgid "Connections to other nodes"
 msgstr "Соединения с другими узлами"
 
 #: public/views/status.html
-msgid "Current Blockchain Tip (ravencore)"
-msgstr "Текущий бит-код (ravencore)"
+msgid "Current Blockchain Tip (btxcore)"
+msgstr "Текущий бит-код (btxcore)"
 
 #: public/views/statistics.html
 msgid "Current Network Hashrate"
@@ -308,8 +308,8 @@ msgid "Last Block"
 msgstr "Последний блок"
 
 #: public/views/status.html
-msgid "Last Block Hash (ravend)"
-msgstr "Последний блочный хэш (ravend)"
+msgid "Last Block Hash (bitcored)"
+msgstr "Последний блочный хэш (bitcored)"
 
 #: public/views/block_list.html
 msgid "Lastest block from date"
@@ -477,40 +477,40 @@ msgid "Rank"
 msgstr "Ранг"
 
 #: public/views/charts.html
-msgid "Ravencoin Circulation"
-msgstr "Ravencoin циркуляция"
+msgid "bitcore Circulation"
+msgstr "bitcore циркуляция"
 
 #: public/views/messages_verify.html
-msgid "Ravencoin comes with a way of signing arbitrary messages."
-msgstr "Ravencoin имеет способ подписания произвольных сообщений."
+msgid "bitcore comes with a way of signing arbitrary messages."
+msgstr "bitcore имеет способ подписания произвольных сообщений."
 
 #: public/views/index.html
-msgid "Ravencoin Community"
-msgstr "Сообщество Ravencoin"
+msgid "bitcore Community"
+msgstr "Сообщество bitcore"
 
 #: public/views/rich_list.html
-msgid "Ravencoin Distribution"
-msgstr "Ravencoin распределение"
+msgid "bitcore Distribution"
+msgstr "bitcore распределение"
 
 #: public/views/statistics.html
-msgid "Ravencoin Mined:"
-msgstr "Ravencoin Заминированный:"
+msgid "bitcore Mined:"
+msgstr "bitcore Заминированный:"
 
 #: public/views/pools.html
-msgid "Ravencoin Pools"
-msgstr "Ravencoin бассейны"
+msgid "bitcore Pools"
+msgstr "bitcore бассейны"
 
 #: public/views/statistics.html
-msgid "Ravencoin Pools Stats"
-msgstr "Ravencoin Статистика пулов"
+msgid "bitcore Pools Stats"
+msgstr "bitcore Статистика пулов"
 
 #: public/views/statistics.html
-msgid "Ravencoin Statistics for the last 24 hours"
-msgstr "Ravencoin Статистика за последние 24 часа"
+msgid "bitcore Statistics for the last 24 hours"
+msgstr "bitcore Статистика за последние 24 часа"
 
 #: public/views/index.html
-msgid "Ravencore"
-msgstr "Ravencore"
+msgid "btxcore"
+msgstr "btxcore"
 
 #: public/views/transaction_sendraw.html
 msgid "Raw transaction data"
@@ -616,8 +616,8 @@ msgid "Synced Blocks"
 msgstr "Синхронизированные блоки"
 
 #: public/views/charts.html
-msgid "The current supply of Ravencoin on the network."
-msgstr "Текущая поставка Ravencoin в сети."
+msgid "The current supply of bitcore on the network."
+msgstr "Текущая поставка bitcore в сети."
 
 #: public/views/dummy-translations.html
 msgid "The daily average of fees paid to miners per transaction."
@@ -632,8 +632,8 @@ msgid "The message is verifiably from {{verification.address}}."
 msgstr "Сообщение проверяется с {{verify.address}}."
 
 #: public/views/dummy-translations.html
-msgid "The number of daily confirmed RVN transactions."
-msgstr "Количество ежедневных подтвержденных транзакций RVN."
+msgid "The number of daily confirmed BTX transactions."
+msgstr "Количество ежедневных подтвержденных транзакций BTX."
 
 #: public/views/dummy-translations.html
 msgid ""
@@ -650,15 +650,15 @@ msgstr "С этим адресом нет транзакций."
 #: public/views/transaction_sendraw.html
 msgid ""
 "This form can be used to broadcast a raw transaction in hex format over\n"
-"        the Ravencoin network."
+"        the bitcore network."
 msgstr ""
 "Эта форма может использоваться для трансляции исходной транзакции\n"
-"        в шестнадцатеричном формате сети Ravencoin."
+"        в шестнадцатеричном формате сети bitcore."
 
 #: public/views/messages_verify.html
 msgid ""
 "This form can be used to verify that a message comes from\n"
-"        a specific Ravencoin address."
+"        a specific bitcore address."
 msgstr ""
 "Эта форма может использоваться для проверки того, что\n"
 "        сообщение поступает из конкретный адрес Равенкойна."
